SERVER-13307 do not try to index ELEM_MATCH_VALUE if a child predicate can't be indexed

(cherry picked from commit 9713848c54f3a0a25f9682d21a35179e6b8a3a86)